--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </p>
         <h2>Objetivo Ubuntu</h2>
         <p>
-          Mandela, quando estava no seu mandato, criou um espaço para que criminosos se desculpa-se com as pessoas como um todo. Dentre essas pessoas que cometeram as atrocidades havia um grupo que admitiram terem matado o filho de Lulu, a lamina e a tiros, pedindo perdão a mãe, ela perdoou eles, porque ela acreditava que guardar as magoas não era bom para eles e muito menos para ela.
+          O objetivo da filosofia é criar e manter uma sociedade que engloba todos pelo ajuda, e sempre visa a superação de diferenças e de preconceitos sejam elas quais forem pela orientação sexual, cor de pele, religião, orientação sexual ou classe, o Ubuntu ressalta a importância de criamos uma sociedade importante para todos em que todos importam, a palavra Simunye que significa "Nós somos um " combina bastante com essa ideia que é criada de varias lutas enfrentadas contra os regimes que excluía o direito e cidadania dos negros.
         </p>
       </div>
     </section>
